finetuning Export data added UPN generation replaced in create script the update is now differend from the correlation update

--- a/configuration.json
+++ b/configuration.json
@@ -40,5 +40,14 @@
             "placeholder": "https://mwpapi.kpnwerkplek.com/api",
             "required": true
         }
+    },
+    {
+        "key": "Domain",
+        "type": "input",
+        "templateOptions": {
+            "label": "UPN Domain",
+            "placeholder": "domain.com",
+            "required": true
+        }
     }
 ]
