--- a/configuration.json
+++ b/configuration.json
@@ -1,44 +1,59 @@
 [
     {
-      "key": "TenantId",
-      "type": "input",
-      "templateOptions": {
-        "label": "AzureAD Tenant ID",
-        "required": true
-      }
+        "key": "AzureAD.TenantId",
+        "type": "input",
+        "templateOptions": {
+            "label": "AzureAD Tenant ID",
+            "required": true
+        }
     },
     {
-      "key": "ClientId",
-      "type": "input",
-      "templateOptions": {
-        "label": "AzureAD ClientId",
-        "required": true
-      }
+        "key": "AzureAD.ClientId",
+        "type": "input",
+        "templateOptions": {
+            "label": "AzureAD ClientId",
+            "required": true
+        }
     },
     {
-      "key": "ClientSecret",
-      "type": "input",
-      "templateOptions": {
-        "label": "AzureAD ClientSecret",
-        "type": "password",
-        "required": true
-      }
+        "key": "AzureAD.ClientSecret",
+        "type": "input",
+        "templateOptions": {
+            "label": "AzureAD ClientSecret",
+            "type": "password",
+            "required": true
+        }
     },
     {
-      "key": "Scope",
-      "type": "input",
-      "templateOptions": {
-        "label": "Scope",
-        "required": true
-      }
+        "key": "AzureAD.Scope",
+        "type": "select",
+        "templateOptions": {
+            "label": "Scope",
+            "placeholder": "Please select an environment",
+            "required": true,
+            "options": [
+                {
+                    "value": "https://kpnwp.onmicrosoft.com/kpnmwpdmwpapi/.default",
+                    "label": "KPN Modern Workplace - Development"
+                },
+                {
+                    "value": "https://kpnwp.onmicrosoft.com/kpnmwptmwpapi/.default",
+                    "label": "KPN Modern Workplace - Test"
+                },
+                {
+                    "value": "https://kpnwp.onmicrosoft.com/kpnmwppmwpapi/.default",
+                    "label": "KPN Modern Workplace - Production"
+                }
+            ]
+        }
     },
     {
-      "key": "BaseUrl",
-      "type": "input",
-      "templateOptions": {
-        "label": "BaseUrl",
-        "placeholder": "https://mwpapi.kpnwerkplek.com/api",
-        "required": true
-      }
+        "key": "BaseUrl",
+        "type": "input",
+        "templateOptions": {
+            "label": "BaseUrl",
+            "placeholder": "https://mwpapi.kpnwerkplek.com/api",
+            "required": true
+        }
     }
-  ]
+]
