Complete refactor of scripts to match the new template as well as multiple fixes

--- a/configuration.json
+++ b/configuration.json
@@ -1,34 +1,42 @@
 [
     {
-        "key": "AzureAD.TenantId",
+        "key": "EntraIDTenantID",
         "type": "input",
+        "defaultValue": "",
         "templateOptions": {
-            "label": "AzureAD Tenant ID",
+            "label": "Entra ID App Registration Directory (tenant) ID",
+            "placeholder": "615g75e2-0v74-4a3c-6gaf-241t1q4m7f54",
+            "description": "",
             "required": true
         }
     },
     {
-        "key": "AzureAD.ClientId",
+        "key": "EntraIDAppId",
         "type": "input",
+        "defaultValue": "",
         "templateOptions": {
-            "label": "AzureAD ClientId",
+            "label": "Entra ID App Registration Application (client) ID",
+            "placeholder": "9c12a9b1-34c5-678d-ac34-8a890100d46d",
+            "description": "",
             "required": true
         }
     },
     {
-        "key": "AzureAD.ClientSecret",
+        "key": "EntraIDAppSecret",
         "type": "input",
+        "defaultValue": "",
         "templateOptions": {
-            "label": "AzureAD ClientSecret",
+            "label": "Entra ID App Registration Client Secret",
             "type": "password",
+            "placeholder": "3lib1234NwDvx.6abc98M._r0yz_7h_B34",
             "required": true
         }
     },
     {
-        "key": "AzureAD.Scope",
+        "key": "KPNMWPScope",
         "type": "select",
         "templateOptions": {
-            "label": "Scope",
+            "label": "KPN MWP Scope",
             "placeholder": "Please select an environment",
             "required": true,
             "options": [
@@ -48,12 +56,44 @@
         }
     },
     {
-        "key": "BaseUrl",
+        "key": "MWPApiBaseUrl",
         "type": "input",
+        "defaultValue": "https://mwpapi.kpnwerkplek.com/api",
         "templateOptions": {
-            "label": "BaseUrl",
+            "label": "MWP Api BaseUrl",
             "placeholder": "https://mwpapi.kpnwerkplek.com/api",
+            "description": "",
             "required": true
+        }
+    },
+    {
+        "key": "setManagerOnCreate",
+        "type": "checkbox",
+        "defaultValue": false,
+        "templateOptions": {
+            "label": "Set manager when an account is created",
+            "description": "",
+            "required": false
+        }
+    },
+    {
+        "key": "updateManagerOnUpdate",
+        "type": "checkbox",
+        "defaultValue": false,
+        "templateOptions": {
+            "label": "Update manager when the account update operation is performed",
+            "description": "",
+            "required": false
+        }
+    },
+    {
+        "key": "isDebug",
+        "type": "checkbox",
+        "defaultValue": false,
+        "templateOptions": {
+            "label": "Toggle debug logging",
+            "description": "When toggled, debug logging will be displayed",
+            "required": false
         }
     }
 ]
